salesforce/force-app/main/default/objects/Task/fields/Cadence_Day__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Day__c</fullName>
    <label>Cadence Day</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Which day in the cadence this task belongs to (0-14)</description>
</CustomField>