salesforce/force-app/main/default/objects/Task/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <label>Cadence Name</label>
    <type>Text</type>
    <length>50</length>
    <description>Identifies which cadence created this task (e.g., "Attempting Contact")</description>
</CustomField>