salesforce/force-app/main/default/objects/Task/fields/Coaching_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Notes__c</fullName>
    <label>Coaching Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Explains why this technique works - coaching for the rep</description>
</CustomField>